# Gosh

./: .gitignore  CMakeLists.txt  README.md  goshsdl.js  index.html
cmake/: Emscripten.cmake
doc/: Doxyfile
include/: alloc.h  concat.h  gosh_alloc.h  gosh_ensemble.h  gosh_foreach.h  gosh_iterateur.h  gosh_macros.h  gosh_tableau.h  mainpage.h
include/cli/: affichage.h  configurer_partie.h  deroulement_partie.h  menu_principal.h  saisie.h
include/go/: chaine.h  chaines.h  couleur.h  coup.h  ensemble_colore.h  ensemble_plateaux.h  ensemble_positions.h  genericTab.h  joueur.h  libertes.h  ordinateur.h  partie.h  pion.h  plateau.h  plateau_type.h  position.h  sauvegarde.h  territoire.h
include/sdl/: bouton.h  charger.h  jouer.h  label.h  main.h  menu.h  radio.h  state.h  textinput.h  tools.h  tutoriel.h
ressources/: CMakeLists.txt
src/: CMakeLists.txt  alloc.c  alloc.h  gosh_alloc.c  gosh_ensemble.c  gosh_foreach.h  gosh_tableau.c
src/cli/: CMakeLists.txt  affichage.c  configurer_partie.c  deroulement_partie.c  main.c  menu_principal.c  saisie.c
src/go/: CMakeLists.txt  chaine.c  chaine.h  chaines.c  couleur.h  coup.c  ensemble_colore.c  ensemble_colore.h  ensemble_plateaux.c  ensemble_positions.c  ensemble_positions.h  genericTab.c  genericTab.h  gosh_foreach.h  libertes.c  ordinateur.c  partie.c  plateau.c  plateau.h  position.c  position.h  sauvegarde.c  territoire.c
src/ordinateurs/: CMakeLists.txt
src/ordinateurs/gnugo/: main.c
src/ordinateurs/random/: main.c
src/sdl/: CMakeLists.txt  bouton.c  charger.c  jouer.c  label.c  main.c  menu.c  radio.c  textinput.c  tools.c  tutoriel.c
src/test/: CMakeLists.txt  main.c  regles.c  unittest.c
tests/: annuler  coup_invalide  coup_valide  double_capture  rejouer  repetition  repetition_passe  valide2
